fixed spacing

--- a/css/base.css
+++ b/css/base.css
@@ -5,17 +5,15 @@ body {
     overflow-y: hidden;
     overflow-x: hidden;
     position: relative;
-    min-width: 320px;
-    min-height: 480px;
-    margin: 0 auto;
 }
 #main {
     position: absolute;
+    width: auto;
     height: 100vh;
     min-width: 320px;
     min-height: 480px;
-    width: 100%;
     margin: 0;
+    padding: 0;
 }
 #mainCanvas {
     width: auto;
